@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.artists.universal"
        name="Universal Artist Scraper"
-       version="2.4.3"
-       provider-name="Team XBMC">
+       version="2.5.0"
+       provider-name="Olympia, Team XBMC">
   <requires>
-    <import addon="xbmc.metadata" version="1.0"/>
+    <import addon="xbmc.metadata" version="2.1.0"/>
     <import addon="metadata.common.last.fm" version="1.5.1"/>
     <import addon="metadata.common.allmusic.com" version="2.5.2"/>
-    <import addon="metadata.common.musicbrainz.org" version="1.2.1"/>
+    <import addon="metadata.common.musicbrainz.org" version="1.2.3"/>
     <import addon="metadata.common.htbackdrops.com" version="1.2.0"/>
-    <import addon="metadata.common.fanart.tv" version="2.0.0"/>
-    <import addon="metadata.common.theaudiodb.com" version="1.3.0"/>
+    <import addon="metadata.common.fanart.tv" version="2.1.2"/>
+    <import addon="metadata.common.theaudiodb.com" version="1.4.0"/>
   </requires>
   <extension point="xbmc.metadata.scraper.artists"
              language="en"
