@@ -1,3 +1,7 @@
+[B]2.5.0[/B]
+Added: option to select language from TheAudioDB.com
+Added back the option to scrape from last.fm
+
 [B]2.4.3[/B]
 Disable last.fm options because last.fm suspended XBMC's API account
 
